# virtual-edge-runtime

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
examples/: blink.py  blink_esp32.py  camera_view.py  read_imu.py  track_and_actuate.py
firmware/ver_bridge/: ver_bridge.ino
tests/: test_conformance.py  test_esp32_backend.py  test_hal_contract.py  test_i2c_conformance.py  test_laptop_backend.py  test_serial_transport.py
ver/: __init__.py  runtime.py
ver/backends/: __init__.py  registry.py
ver/backends/esp32/: __init__.py  backend.py  fake_devices.py  protocol.py  transport.py
ver/backends/laptop/: __init__.py  backend.py
ver/backends/mock/: __init__.py  backend.py
ver/drivers/: __init__.py  mpu6050.py
ver/hal/: __init__.py  base.py  errors.py  types.py
ver/tools/: i2c.py  i2cdebug.py  ports.py
